force-app/main/default/objects/FENC_Assessment__c/FENC_Assessment__c.object-meta.xml
<CustomObject>
    <description>Custom object to record Fraud, Error and Non-Compliance (FENC) assessments</description>
    <label>FENC Assessment</label>
    <nameField>
        <displayFormat>FEN-{00000}</displayFormat>
        <label>FENC Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FENC Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>