force-app/main/default/objects/FENC_Assessment__c/fields/FENC_Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>FENC_Date_Completed__c</fullName>
    <label>FENC Date Completed</label>
    <type>Date</type>
</CustomField>