force-app/main/default/objects/FENC_Assessment__c/fields/FENC_Date_Started__c.field-meta.xml
<CustomField>
    <fullName>FENC_Date_Started__c</fullName>
    <label>FENC Date Started</label>
    <type>Date</type>
</CustomField>