force-app/main/default/objects/FENC_Assessment__c/fields/Sample_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Sample_Approval_Date__c</fullName>
    <label>Sample Approval Date</label>
    <type>Date</type>
</CustomField>