force-app/main/default/objects/FENC_Assessment__c/fields/Sample_List__c.field-meta.xml
<CustomField>
    <fullName>Sample_List__c</fullName>
    <label>Sample List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>