force-app/main/default/objects/FENC_Assessment__c/fields/Sample_Notes__c.field-meta.xml
<CustomField>
    <fullName>Sample_Notes__c</fullName>
    <label>Sample Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>