force-app/main/default/objects/FENC_Assessment__c/fields/Sample_Status__c.field-meta.xml
<CustomField>
    <fullName>Sample_Status__c</fullName>
    <label>Sample Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Approved/Confirmed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>