force-app/main/default/objects/FENC_Assessment__c/recordTypes/FENC.recordType-meta.xml
<RecordType>
    <fullName>FENC</fullName>
    <active>true</active>
    <description>Fraud, Error and Non-Compliance (FENC) Assessment</description>
    <label>FENC</label>
</RecordType>