force-app/main/default/objects/FENC_Assessment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FENC_Date_Started__c</columns>
    <columns>FENC_Date_Completed__c</columns>
    <columns>FENC_Month__c</columns>
    <columns>Sample_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>